# lnbits-extensions

./: .gitignore  .prettierignore  Makefile  README.md  build.sh  check.py  extensions-trial.json  extensions.json  extensions.json.example  extensions_v1.json  index.html  package-lock.json  package.json  pyproject.toml  test.sh  toc.md  update_version.py  util.sh  vite.config.js
.github/workflows/: check.yml  jmeter.yml  static.yml  validate.yml
integration/: 001_extensions-enable-all.jmx  002_lnurl.jmx  002_lnurl_live.jmx  002_saas_invoice.jmx  003_tpos.jmx  004_tpos-pay-to-enable.jmx  005_lnurlw-race.jmx  006_watchonly-satspay-tipjar.jmx  007_lndhub.jmx  008_lnaddress-conflict.jmx  009_example_upgrade.jmx  010_nostrnip5.jmx  011_auction_house.jmx  011_lncalendar.jmx  extensions-enable-all.jmx  lnurl.jmx  lnurlw-race.jmx  load_001_create_payments.jmx  load_001_create_users.jmx  load_001_users.jmx  load_002_create_payments.jmx  load_003_search_payments.jmx  load_004_scenario_01.jmx  tpos-pay-to-enable.jmx  tpos.jmx  watchonly-satspay-tipjar.jmx
integration/fragments/: init-account.jmx  init-server.jmx
integration/scripts/: check_admin_extension_status_code.js  check_price_in_sats_vs_millisats.js  extract_extension_data.js  extract_extension_release_by_version.js  extract_extensions_ids.js  extract_latest_extension_release.js  lndhub_check_balance.js  lndhub_check_balance_after_payments.js  lndhub_check_payments.js  lndhub_check_payments_after_payment.js  lndhub_check_transactions.js  lndhub_check_transactions_after_payment.js  (+23 more)
src/: index.jsx  index.scss
