[project]
name = "lnbits-extensions"
version = "1.0.0"
requires-python = ">=3.10,<3.13"
description = "LNbits Extensions Repository"
authors = [{ name = "Alan Bits", email = "alan@lnbits.com" }]
urls = { Homepage = "https://extensions.lnbits.com", Repository = "https://github.com/lnbits/lnbits-extensions" }
readme = "README.md"
